Fix error: Files.readString(...) not supported in Java8.